# pytemplate

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  makefile  pyproject.toml  setup.cfg  setup.py
doc/source/: conf.py  index.rst  reference.rst
notebooks/: cpython.ipynb
pytemplate/: __init__.py  pytemplate.py
pytemplate/tests/: conftest.py  test_get_data.py
src/cpp/: CMakeLists.txt
src/cpp/include/: example.hpp
src/cpp/src/: example.cpp
src/python/pytemplate/: __init__.py  cy.pxd  cy.pyx  template_class.py  vector.pyx
src/python/pytemplate/tests/: template_class.py
